--- a/style.css
+++ b/style.css
@@ -2841,8 +2841,8 @@ p .sb {
 
 /*-- Section 2 - Main Page 4 --*/
 
-.h2_bold_wrapp {
-
+.section_2_land {
+    padding: 30px 0 20px 0;
 }
 
 .h2_bold_wrapp h2 {
@@ -3495,7 +3495,7 @@ p.date_2 {
 
     .promo_questions {
         margin-top: 15px;
-        margin-bottom: 15px;
+        margin-bottom: 33px;
     }
 
     .promo_questions p {
@@ -3510,8 +3510,7 @@ p.date_2 {
 
     .steps_thumbs_2 {
         display: block;
-        margin: 10px 0;
-        text-align: center;
+        margin: 10px -4%;
     }
 
     .step_thumb_2 {
@@ -3780,7 +3779,10 @@ p.date_2 {
     }
 
     .steps_thumbs_2 {
-        text-align: left;
+        display: flex;
+        display: -webkit-flex;
+        justify-content: space-between;
+        --justify-content: space-between;
     }
 
     .h1_wrapp_2 h1 {
@@ -3847,5 +3849,23 @@ p.date_2 {
     }
 
     /*-- /Section 2 - News Article --*/
+
+}
+
+@media only screen and (max-width: 400px) {
+
+    /*-- Section 1 - Main Page 4 --*/
+
+    .steps_thumbs_2 {
+        display: block;
+        margin-bottom: 20px;
+    }
+
+    .step_thumb_2 {
+        display: block;
+        text-align: center;
+    }
+
+    /*-- /Section 1 - Main Page 4 --*/
 
 }
