--- a/style.css
+++ b/style.css
@@ -2784,21 +2784,22 @@ textarea + label.error {
 }
 
 .promo_questions {
-    margin-top: 48px;
-    margin-bottom: 55px;
+    margin-top: 42px;
+    margin-bottom: 30px;
 }
 
 .promo_questions p {
-    padding: 3px 0;
+    padding: 15px 0;
     font-family: "Roboto Slab";
-    font-size: 60px;
-    line-height: 74px;
+    font-size: 32px !important;
+    line-height: 39px !important;
     font-weight: bold;
     color: #1E1E1E;
+    opacity: .3;
 }
 
 .h1_wrapp_2 h1 {
-    padding: 4px 0;
+    padding: 1px 0;
     font-size: 80px;
     line-height: 82px;
     font-weight: bold;
@@ -2806,7 +2807,7 @@ textarea + label.error {
 }
 
 .h1_wrapp_2 p {
-    padding: 4px 0;
+    padding: 1px 0;
     font-family: "Open Sans";
     font-size: 25px;
     line-height: 30px;
@@ -2835,6 +2836,10 @@ textarea + label.error {
 
 p .sb {
     font-weight: 600;
+}
+
+.promo_content_2 .green_pill_2 {
+    margin: 22px 0;
 }
 
 /*-- /Section 1 - Main Page 4 --*/
@@ -2872,11 +2877,11 @@ p .sb {
 }
 
 .item .col:nth-child(1) {
-    width: 60px;
+    width: 65px;
 }
 
 .item .col:nth-child(2) {
-    width: calc(100% - 60px);
+    width: calc(100% - 65px);
     padding-top: 7px;
 }
 
@@ -3498,11 +3503,6 @@ p.date_2 {
         margin-bottom: 33px;
     }
 
-    .promo_questions p {
-        font-size: 45px;
-        line-height: 53px;
-    }
-
     .h1_wrapp_2 h1 {
         font-size: 64px;
         line-height: 70px;
@@ -3583,14 +3583,32 @@ p.date_2 {
 
     /*-- Section 1 - Main Page 4 --*/
 
+    .promo_content_2 {
+        text-align: left !important;
+    }
+
+    .promo_questions {
+        margin-top: 0;
+        margin-bottom: 11px;
+    }
+
     .promo_questions p {
-        font-size: 41px;
-        line-height: 46px;
+        padding: 5px 0;
+        text-align: left;
+        font-size: 24px !important;
+        line-height: 30px !important;
     }
 
     .h1_wrapp_2 h1 {
-        font-size: 56px;
-        line-height: 66px;
+        text-align: left;
+        font-size: 45px;
+        line-height: 56px;
+    }
+
+    .h1_wrapp_2 p {
+        text-align: left;
+        font-size: 18px !important;
+        line-height: 23px !important;
     }
 
     /*-- /Section 1 - Main Page 4 --*/
@@ -3660,7 +3678,7 @@ p.date_2 {
 
     .news_thumb_big .img_box_wrapp {
         height: 160px;
-        margin-bottom: 18px;
+        margin-bottom: 13px;
     }
 
     .news_thumb_big .img_box {
@@ -3676,6 +3694,21 @@ p.date_2 {
 
     .news_thumb {
         width: calc(50% - 30px);
+    }
+
+    .news_thumb .description {
+        display: flex;
+        display: -webkit-flex;
+        flex-direction: column;
+        -webkit-flex-direction: column;
+    }
+
+    .news_thumb .description p:nth-child(1) {
+        order: 2;
+    }
+
+    .news_thumb p.date_2 {
+        order: 1;
     }
 
     /*-- /Section 3 - Main Page 4 --*/
@@ -3781,34 +3814,13 @@ p.date_2 {
 
 /*-- Section 2 - Main Page 4 --*/
 
-    .two_cols .left_col {
-        display: flex;
-    }
-
     .item {
-        display: block;
-        width: 50%;
-    }
-
-    .item:nth-child(odd) {
-        margin: 5px 0;
-        padding-right: 10px;
-    }
-
-    .item:nth-child(even) {
-        margin: 5px 0;
-        padding-left: 10px;
-    }
-
-    .item .col:nth-child(1) {
-        width: 50px;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    .item .col:nth-child(2) {
         width: 100%;
-        text-align: center;
+    }
+
+    .item:nth-child(even),
+    .item:nth-child(odd) {
+        margin: 10px 0;
     }
 
 /*-- /Section 2 - Main Page 4 --*/
@@ -3818,6 +3830,11 @@ p.date_2 {
 @media only screen and (max-width: 480px) {
 
     /*-- Section 1 - Main Page 4 --*/
+
+    .promo_content_2 {
+        padding-top: 7px;
+        padding-bottom: 34px;
+    }
 
     .promo_questions {
         margin-top: 5px;
@@ -3838,7 +3855,11 @@ p.date_2 {
 
     .h1_wrapp_2 h1 {
         font-size: 45px;
-        line-height: 61px;
+        line-height: 51px;
+    }
+
+    .promo_content_2 .green_pill_2 {
+        width: 100%;
     }
 
     /*-- /Section 1 - Main Page 4 --*/
@@ -3846,7 +3867,7 @@ p.date_2 {
     /*-- Section 3 - Main Page 4 --*/
 
     .news_sect_inner {
-        padding: 40px 0;
+        padding: 40px 0 15px;
     }
 
     .section_title_wrapp h2 {
@@ -3857,14 +3878,79 @@ p.date_2 {
         margin: 0;
     }
 
+    .news_slider_2_wrapp {
+        margin: 0 -3%;
+        padding: 4px 0 20px 0;
+    }
+
     .news_thumb_big {
         width: 100%;
-        margin: 15px 0;
+        height: 170px;
+        margin: 0;
+        position: relative;
+    }
+
+    .news_thumb_big .img_box_wrapp,
+    .news_thumb_big .img_box {
+        height: 170px;
+        margin-bottom: 0;
+    }
+
+    .news_thumb_big .col:nth-child(2) {
+        width: 100%;
+        padding: 15px 15px 4px 15px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 2;
+        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,.6) 100%);
+        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,.6) 100%);
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,.6) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#66000000',GradientType=0 );
+    }
+
+    .news_thumb_big p {
+        font-weight: 600;
+        color: #ffffff !important;
     }
 
     .news_thumb {
         width: 100%;
-        margin: 15px 0;
+        margin: 0;
+        position: relative;
+    }
+
+    .news_thumb .img_box_wrapp,
+    .news_thumb .img_box {
+        height: 170px;
+        margin-bottom: 0;
+    }
+
+    .news_thumb .description {
+        padding: 15px 15px 4px 15px;
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 2;
+        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,.6) 100%);
+        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,.6) 100%);
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,.6) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#66000000',GradientType=0 );
+    }
+
+     .news_thumb .description p {
+        font-weight: 600;
+        color: #ffffff !important;
+     }
+
+     .news_thumb p.date_2 {
+        color: #ffffff !important;
+    }
+
+    .slider_arrows_2 {
+        margin: 0 auto;
+        width: 100px;
     }
 
     /*-- /Section 3 - Main Page 4 --*/
@@ -3901,30 +3987,27 @@ p.date_2 {
 
     /*-- /Section 2 - News Article --*/
 
-    /*-- /Section 2 - Main Page 4 --*/
+    /*-- Section 1 - Main Page 4 --*/
 
-    .item {
-        width: 100%;
-        max-width: 380px;
+    .two_cols .left_col {
         padding-bottom: 15px;
-        border-bottom: 1px solid #ededed;
     }
 
-    .item:last-child {
-        border-bottom: none;
-    }
-
+    .item:nth-child(even),
     .item:nth-child(odd) {
-        margin: 5px auto;
-        padding-right: 0;
+        margin: 5px 0;
     }
 
-    .item:nth-child(even) {
-        margin: 5px auto;
-        padding-left: 0;
+    /*-- /Section 1 - Main Page 4 --*/
+
+    /*-- Section 3 - All News --*/
+
+    .news_cards_wrapp {
+        margin-left: -3%;
+        margin-right: -3%;
     }
 
-    /*-- /Section 2 - Main Page 4 --*/
+    /*-- /Section 3 - All News --*/
 
 }
 
